--- a/ascon_mobile/web/index.html
+++ b/ascon_mobile/web/index.html
@@ -6,10 +6,7 @@
     <meta charset="UTF-8" />
     <meta content="IE=Edge" http-equiv="X-UA-Compatible" />
     <meta name="description" content="ASCON Alumni Connect Mobile App." />
-    <meta
-      name="google-signin-client_id"
-      content="641176201184-3q7t2hp3kej2vvei41tpkivn7j206bf7.apps.googleusercontent.com"
-    />
+
     <meta
       name="google-signin-client_id"
       content="641176201184-3q7t2hp3kej2vvei41tpkivn7j206bf7.apps.googleusercontent.com"
@@ -18,7 +15,7 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="apple-mobile-web-app-title" content="ascon_mobile" />
+    <meta name="apple-mobile-web-app-title" content="ASCON Alumni" />
 
     <link rel="apple-touch-icon" href="icons/Icon-192.png" />
     <link rel="icon" type="image/png" href="favicon.png" />
@@ -32,102 +29,19 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
+
     <style>
       body {
         font-family: "Roboto", sans-serif;
+        background-color: #FFFFFF; /* Matches your Flutter Splash Screen */
+        margin: 0;
+        padding: 0;
+        overflow: hidden; /* Prevents scrollbars while loading */
       }
     </style>
-
-    <style id="splash-screen-style">
-      html {
-        height: 100%;
-      }
-      body {
-        margin: 0;
-        min-height: 100%;
-        background-color: #ffffff;
-        background-size: 100% 100%;
-      }
-      .center {
-        margin: 0;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        -ms-transform: translate(-50%, -50%);
-        transform: translate(-50%, -50%);
-      }
-      .contain {
-        display: block;
-        width: 100%;
-        height: 100%;
-        object-fit: contain;
-      }
-      .stretch {
-        display: block;
-        width: 100%;
-        height: 100%;
-      }
-      .cover {
-        display: block;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-      }
-      .bottom {
-        position: absolute;
-        bottom: 0;
-        left: 50%;
-        -ms-transform: translate(-50%, 0);
-        transform: translate(-50%, 0);
-      }
-      .bottomLeft {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-      }
-      .bottomRight {
-        position: absolute;
-        bottom: 0;
-        right: 0;
-      }
-    </style>
-
-    <script id="splash-screen-script">
-      function removeSplashFromWeb() {
-        document.getElementById("splash")?.remove();
-        document.getElementById("splash-branding")?.remove();
-        document.body.style.background = "transparent";
-      }
-    </script>
   </head>
+  
   <body>
-    <picture id="splash">
-      <source
-        srcset="
-          splash/img/light-1x.png 1x,
-          splash/img/light-2x.png 2x,
-          splash/img/light-3x.png 3x,
-          splash/img/light-4x.png 4x
-        "
-        media="(prefers-color-scheme: light)"
-      />
-      <source
-        srcset="
-          splash/img/dark-1x.png 1x,
-          splash/img/dark-2x.png 2x,
-          splash/img/dark-3x.png 3x,
-          splash/img/dark-4x.png 4x
-        "
-        media="(prefers-color-scheme: dark)"
-      />
-      <img
-        class="center"
-        aria-hidden="true"
-        src="splash/img/light-1x.png"
-        alt=""
-      />
-    </picture>
-
     <script src="flutter_bootstrap.js" async></script>
   </body>
 </html>
