--- a/ascon_mobile/web/index.html
+++ b/ascon_mobile/web/index.html
@@ -42,6 +42,9 @@
   </head>
   
   <body>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-messaging.js"></script>
+
     <script src="flutter_bootstrap.js" async></script>
   </body>
 </html>
