--- a/ascon_mobile/web/index.html
+++ b/ascon_mobile/web/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="UTF-8" />
     <meta content="IE=Edge" http-equiv="X-UA-Compatible" />
-    <meta name="description" content="ASCON Alumni Connect Mobile App." />
+    <meta name="description" content="ASCON Alumni" />
 
     <meta
       name="google-signin-client_id"
@@ -33,17 +33,17 @@
     <style>
       body {
         font-family: "Roboto", sans-serif;
-        background-color: #FFFFFF; /* Matches your Flutter Splash Screen */
+        background-color: #FFFFFF;
         margin: 0;
         padding: 0;
-        overflow: hidden; /* Prevents scrollbars while loading */
+        overflow: hidden;
       }
     </style>
   </head>
   
   <body>
-    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-messaging.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-messaging-compat.js"></script>
 
     <script src="flutter_bootstrap.js" async></script>
   </body>
