--- a/ascon_mobile/web/index.html
+++ b/ascon_mobile/web/index.html
@@ -30,6 +30,8 @@
       rel="stylesheet"
     />
 
+    <script src="https://cdn.jsdelivr.net/npm/@twilio/voice-sdk@latest/dist/twilio.min.js"></script>
+
     <style>
       body {
         font-family: "Roboto", sans-serif;
