--- a/ascon_mobile/web/index.html
+++ b/ascon_mobile/web/index.html
@@ -21,6 +21,17 @@
     <link rel="icon" type="image/png" href="favicon.png" />
 
     <title>ASCON Alumni</title>
+
+    <meta property="og:title" content="ASCON Alumni Network" />
+    <meta property="og:description" content="Connect, network, and grow with the official ASCON Alumni community." />
+    <meta property="og:image" content="https://asconmobile.netlify.app/social-logo.png" />
+    <meta property="og:url" content="https://asconmobile.netlify.app" />
+    <meta property="og:type" content="website" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="ASCON Alumni Network" />
+    <meta name="twitter:description" content="Connect, network, and grow with the official ASCON Alumni community." />
+    <meta name="twitter:image" content="https://asconmobile.netlify.app/social-logo.png" />
     <link rel="manifest" href="manifest.json" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -30,7 +41,7 @@
       rel="stylesheet"
     />
 
-    <script src="https://cdn.jsdelivr.net/npm/@twilio/voice-sdk@latest/dist/twilio.min.js"></script>
+    <script src="https://download.agora.io/sdk/release/iris-web-rtc_n450_w4220_0.8.6.js"></script>
 
     <style>
       body {
@@ -46,6 +57,30 @@
   <body>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-messaging-compat.js"></script>
+
+    <script>
+      const origLog = console.log;
+      const origDebug = console.debug;
+      const origInfo = console.info;
+
+      function cleanConsole(origFn, ...args) {
+        if (args.length > 0 && typeof args[0] === 'string') {
+          const msg = args[0];
+          // If the log contains any of these spammy keywords, silently drop it
+          if (msg.includes('GSI_LOGGER') || 
+              msg.includes('[Iris') || 
+              msg.includes('%cAgora-SDK') || 
+              msg.includes('RtcEngine_')) {
+            return; 
+          }
+        }
+        origFn(...args);
+      }
+
+      console.log = (...args) => cleanConsole(origLog, ...args);
+      console.debug = (...args) => cleanConsole(origDebug, ...args);
+      console.info = (...args) => cleanConsole(origInfo, ...args);
+    </script>
 
     <script src="flutter_bootstrap.js" async></script>
   </body>
