--- a/ascon_mobile/web/index.html
+++ b/ascon_mobile/web/index.html
@@ -41,6 +41,7 @@
       rel="stylesheet"
     />
 
+    <script src="https://download.agora.io/sdk/release/AgoraRTC_N.js"></script>
     <script src="https://download.agora.io/sdk/release/iris-web-rtc_n450_w4220_0.8.6.js"></script>
 
     <style>
